OpenGL error when using Cycles engine #41314

Closed
opened 2014-08-04 08:23:24 +02:00 by dru banerjee · 10 comments

Win 8.1 AMD64 Radeon

2.71 e7b396c from Buildbot,

Intermittent behavior - simple object, simple material, cycles engine hit the openGL render button, fails with this error:

'Failed to create OpenGL off-screen buffer, GPUFrameBuffer: framebuffer incomplete error 1282 'Invalid operation'

Does not do it in stable 2.70a.

Some tests suggest that if you are in 'rendered' view and hit the render openGL button it will fail. And also after you leave 'rendered view' it will fail the first time you press it.
So to summarize: if you are in 'rendered view' it will (almost) always fail to make an OpenGL render.
If you have been in rendered view it will fail the first time, and succeed after.

Here is the procedure to (hopefully)to recreate error. Open Blender. Load Factory settings. Switch to cycles, change material, world and lamp to cycles versions by deleting them and hitting new, or open attached file. Switch to rendered view. Hit OpenGL render button. Fail. Switch back to solid view. Hit openGL render button. fail. Hit it again. Renders!

Hope this report is detailed and complete.

OpenGL_fail.blend

Win 8.1 AMD64 Radeon 2.71 e7b396c from Buildbot, Intermittent behavior - simple object, simple material, **cycles engine** hit the openGL render button, fails with this error: 'Failed to create OpenGL off-screen buffer, GPUFrameBuffer: framebuffer incomplete error 1282 'Invalid operation' Does not do it in stable 2.70a. Some tests suggest that if you are in 'rendered' view and hit the render openGL button it will fail. And also after you leave 'rendered view' ***it will fail the first time*** you press it. So to summarize: if you are in 'rendered view' it will (almost) always fail to make an OpenGL render. If you have been in rendered view it will fail the first time, and succeed after. Here is the procedure to (hopefully)to recreate error. Open Blender. Load Factory settings. Switch to cycles, change material, world and lamp to cycles versions by deleting them and hitting new, or open attached file. Switch to rendered view. Hit OpenGL render button. Fail. Switch back to solid view. Hit openGL render button. fail. Hit it again. Renders! Hope this report is detailed and complete. [OpenGL_fail.blend](https://archive.blender.org/developer/F101441/OpenGL_fail.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Druban

Added subscriber: @Druban

#41465 was marked as duplicate of this issue

#41465 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @metaphorshear

Added subscriber: @metaphorshear
Marty Moradian self-assigned this 2014-08-12 16:11:14 +02:00

Added subscriber: @cronk

Added subscriber: @cronk

◀ Merged tasks: #41465.

◀ Merged tasks: #41465.

This issue was referenced by 8986883de1

This issue was referenced by 8986883de1d64262ee6ea9250ad392726b75307a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8986883de1.

Closed by commit 8986883de1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41314
No description provided.