Fix T41314: OpenGL error when using Cycles engine